# bc-core

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  config.py  main.py  pyproject.toml  test.py
app/common/: wqb.py
app/core/: db.py  logger.py  schema.py  server.py
app/crud/: __init__.py  quants.py
app/models/: __init__.py  base.py  columns.py  quants.py
app/schema/: __init__.py  quants.py
app/utils/: __init__.py
db_sync/: env.py
db_sync/versions/: 029b30d1897a_update_hash.py  071903396219_add_operators.py  0e95d72c88f4_update_hash.py  140d88ea44bd_add_uk.py  1a08d4e7f492_update_alpha.py  1a096b22c062_update_template.py  1a53563a9dd1_init.py  20e7acc6f079_update_alpha.py  212ae7f61681_update_id.py  283fb28a1512_add_mapped_typ.py  28ee85ce149b_add_uk.py  2d0010dcc76d_update_id.py  2f07de8f048f_update_alpha.py  3027d4db3710_add_uk.py  49c7402fe27c_init.py  4c32d4e693c9_update_table.py  4f2ee39dfeca_update_column.py  510c066f294d_update_id.py  51daaae37c00_add_sharp.py  5205f0bd6886_update_time.py  5d87f5ced222_update_time.py  6bd1af41fcfe_update_settings.py  73f868f23bfe_update_id.py  7502892e25bc_update_id.py  8008d12341de_update_hash.py  929694736ce1_update_column.py  a2e0e364b32d_update_id.py  a412f7300779_add_uk.py  a603247d2bdd_add_uk.py  b0f40e25cb1f_update_time.py  b39e8adec242_add_uk.py  b710c548ab08_update_hash.py  b959255238c5_add_uk.py  be1ba2c7d812_add_field.py  bffb768a1556_add_field.py  c7d886e0df7c_add_uk.py  ca518d341364_update_id.py  cb39175bbe33_remove_foreign_key.py  d606d7ca04ad_add_quant_table.py  e23ad8aa3e01_add_sharp.py  (+5 more)
scripts/: run.py
scripts/code/: init.py  locate_alpha_response.json  (+2 more)
(+25 files in other folders)
