[project]
name = "bc-core"
version = "0.1.0"
description = ""
authors = [
    {name = "alian",email = "salivawbc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "certifi (==2025.7.14)",
    "charset-normalizer (==3.4.2)",
    "distro (==1.9.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jiter (==0.10.0)",
    "numpy (==2.3.2)",
    "openai (==1.99.1)",
    "pandas (==2.3.1)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "requests (==2.32.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sentry-sdk[fastapi] (>=2.34.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "wqb (>=0.2.5,<0.3.0)",
    "bc-fastkit @ file:///Users/alian/code/my/bc-fastkit",
    "humps (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.dependencies]
bc-fastkit = {develop = true}
